Fix IE 11 text wrapping issues within flex-container

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -292,6 +292,7 @@ h5 {
 }
 
 .feature-title {
+  text-align: center;
   margin: var(--stepDown1Lg) 0;
 }
 
@@ -313,9 +314,6 @@ h5 {
 }
 
 .feature {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   flex: 1 1 100%;
   padding: var(--stepUp2Lg);
   border-radius: 7px;
@@ -334,7 +332,9 @@ h5 {
 }
 
 .feature-icon {
+  display: block;
   width: 80px;
+  margin: 0 auto;
 }
 
 .feature:last-child {
